# protocols.risk_propagation

./: CITATION.cff  LICENSE  README.md  pyproject.toml  setup.cfg
scripts/: example_usage.py
src/tno/mpc/protocols/risk_propagation/: __init__.py  account.py  accounts.py  bank.py  exceptions.py  player.py  transaction.py  transactions.py
src/tno/mpc/protocols/risk_propagation/test/: __init__.py  conftest.py  plaintext_risk_propagation.py  test_comparison_against_plaintext.py  test_generate_keys.py  test_risk_propagation.py  test_store_load_results.py
src/tno/mpc/protocols/risk_propagation/test/test_data/: __init__.py  generate_test_case_data.py
src/tno/mpc/protocols/risk_propagation/test/test_data/missing_nodes/: __init__.py  nodes_all.csv  nodes_local0.csv  nodes_local1.csv  nodes_local2.csv  transactions_all_period0.csv  transactions_all_period1.csv  transactions_all_period2.csv  transactions_local0_period0.csv  transactions_local0_period1.csv  transactions_local0_period2.csv  transactions_local1_period0.csv  transactions_local1_period1.csv  transactions_local1_period2.csv  transactions_local2_period0.csv  transactions_local2_period1.csv  transactions_local2_period2.csv
src/tno/mpc/protocols/risk_propagation/test/test_data/small/: __init__.py  nodes_all.csv  nodes_local0.csv  nodes_local1.csv  nodes_local2.csv  transactions_all_period0.csv  transactions_local0_period0.csv  transactions_local1_period0.csv  transactions_local2_period0.csv
src/tno/mpc/protocols/risk_propagation/test/test_data/small_multi_period/: __init__.py  nodes_all.csv  nodes_local0.csv  nodes_local1.csv  nodes_local2.csv  transactions_all_period0.csv  transactions_all_period1.csv  transactions_all_period2.csv  transactions_local0_period0.csv  transactions_local0_period1.csv  transactions_local0_period2.csv  transactions_local1_period0.csv  transactions_local1_period1.csv  transactions_local1_period2.csv  transactions_local2_period0.csv  transactions_local2_period1.csv  transactions_local2_period2.csv
src/tno/mpc/protocols/risk_propagation/test/test_data/small_multi_period_test/: __init__.py  nodes_all.csv  nodes_local0.csv  nodes_local1.csv  nodes_local2.csv  transactions_all_period0.csv  transactions_all_period1.csv  transactions_all_period2.csv  transactions_all_period3.csv  transactions_all_period4.csv  transactions_local0_period0.csv  transactions_local0_period1.csv  transactions_local0_period2.csv  transactions_local0_period3.csv  transactions_local0_period4.csv  transactions_local1_period0.csv  transactions_local1_period1.csv  transactions_local1_period2.csv  transactions_local1_period3.csv  transactions_local1_period4.csv  transactions_local2_period0.csv  transactions_local2_period1.csv  transactions_local2_period2.csv  transactions_local2_period3.csv  transactions_local2_period4.csv
tno/mpc/protocols/risk_propagation/: __init__.py  account.py  accounts.py  bank.py  player.py  transactions.py
tno/mpc/protocols/risk_propagation/example_data/: __init__.py  nodes_A.csv  nodes_B.csv  nodes_C.csv  transactions_A.csv  transactions_B.csv  transactions_C.csv  transactions_all.csv
tno/mpc/protocols/risk_propagation/test/: test_risk_propagation.py
