[metadata]
name = tno.mpc.protocols.risk_propagation
author = TNO MPC Lab
author_email = mpclab@tno.nl
maintainer = TNO MPC Lab
maintainer_email = mpclab@tno.nl
description = Secure risk propagation using distributed Paillier
classifiers =
   License :: OSI Approved :: Apache Software License
   Programming Language :: Python :: 3
   Operating System :: OS Independent
   Intended Audience :: Developers
   Intended Audience :: Information Technology
   Intended Audience :: Science/Research
   Typing :: Typed
   Topic :: Security :: Cryptography
license = Apache License, Version 2.0
license_file = LICENSE
platform = any
python_requires = >=3.7
keywords =
    TNO
    MPC
    multi-party computation
    protocols
    risk propagation
url = https://mpc.tno.nl/
download_url = https://pypi.org/project/tno.mpc.protocols.risk_propagation/#files
project_urls =
    Documentation = https://docs.mpc.tno.nl/protocols/risk_propagation/0.1.6
    Source Code = https://github.com/TNO-MPC/protocols.risk_propagation
version = attr: tno.mpc.protocols.risk_propagation.__version__
long_description_content_type = text/markdown
long_description = file: README.md

[options]
packages =
    tno.mpc.protocols.risk_propagation
    tno.mpc.protocols.risk_propagation.example_data
    tno.mpc.protocols.risk_propagation.test
zip_safe = False
install_requires =
    pandas
    tno.mpc.communication
    tno.mpc.encryption_schemes.paillier
    tno.mpc.protocols.distributed_keygen
namespace_packages =
    tno
    tno.mpc
    tno.mpc.protocols
include_package_data = True

[options.package_data]
tno.mpc.protocols.risk_propagation =
    py.typed
tno.mpc.protocols.risk_propagation.example_data =
    *.csv

[options.extras_require]
gmpy =
    gmpy2
tests =
    data-science-types  # Stubs used for type hinting pandas (and numpy)
    pytest
    pytest-asyncio
